Updated tex file

--- a/deedy_resume_Hien.tex
+++ b/deedy_resume_Hien.tex
@@ -86,7 +86,7 @@ GitHub:   \href{https://github.com/nguyenduchien1994}{\custombold{hnguyen}}
 \runsubsection{Boston University}\\
 \location{Boston, MA}
 \descript{Master of Science \\ Computer Engineering}
-Graduation December 2018 \\ GPA: 3.50
+Graduation December 2017 \\ GPA: 3.60
 \sectionsep
 
 \runsubsection{Union College}\\		
@@ -100,16 +100,18 @@ Graduated - June 2016 \\ GPA: 3.71
 %     COURSEWORK
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+    \vspace{-2.0mm}
 \section{Coursework}
 \vspace{0.5mm} % Hacky fix for awkward extra vertical space 
 \flushleft
 \subsection{Graduate}
 %\textbullet \, Advanced Data Structures \& Algorithms \\
+\textbullet \, Cybersecurity \\
 \textbullet \, Machine Learning \\
+\textbullet \, Learning From Data \\
 \textbullet \, Advanced Data Structures \\
-\textbullet \, Digital VLSI Circuit Design \\
+%\textbullet \, Digital VLSI Circuit Design \\
 \textbullet \, Computer Architecture \\
-%\textbullet \, Vulnerabilities, Defense Systems \& Malware Analysis \\
 \textbullet \, Vulnerabilities, Defense Systems \& Malware Analysis \\
 \sectionsep
 
@@ -131,10 +133,10 @@ Graduated - June 2016 \\ GPA: 3.71
 \section{Languages}
 \begin{tabular}{lll}
 \custombold{Proficient} & \custombold{Mid} & \custombold{Familiar} \\
-Python & Matlab & C/C++\\
-Java & HTML/CSS & Bash\\
-Javascript & Verilog & CUDA\\
-MIPS & \LaTeX\ & SQL\\ 
+Python & Matlab & Bash\\
+Java & HTML/CSS & SQL\\
+Javascript & C/C++ & CUDA\\
+PHP & \LaTeX\ & Verilog\\ 
 \end{tabular}
 \sectionsep
 
@@ -143,13 +145,14 @@ MIPS & \LaTeX\ & SQL\\
 %     TOOLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+    \vspace{-2.0mm}
 \section{Software} 
 \vspace{0.5mm} % Hacky fix for awkward extra vertical space 
 \begin{tabular}{ll}
 Unix/Linux & Git \\
 Cadence Virtuoso & PyMTL \\
 Cuckoo Sandbox & mitmproxy \\
-PHP & Django \\ 
+Vim & Django \\ 
 jQuery & Bootstrap
 
 \end{tabular}
@@ -199,7 +202,7 @@ jQuery & Bootstrap
 \vspace{1mm}
 \justify
 \begin{tightemize}
-\item Designed and developed \custombold{\href{http://datavis.eol.ucar.edu/ncharts/}{Ncharts}}, a multi-device compatible Django web application that constructs real-time scientific representation of a wide variety of data from different projects. \custombold{\href{https://github.com/ncareol/ncharts}{Source}}
+\item Designed and developed \custombold{\href{https://github.com/ncareol/ncharts}{source}} code for \custombold{\href{http://datavis.eol.ucar.edu/ncharts/}{Ncharts}}, a multi-device compatible Django web application that constructs real-time scientific representation of a wide variety of data from different projects.
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
@@ -210,7 +213,8 @@ jQuery & Bootstrap
 \vspace{1mm}
 \justify
 \begin{tightemize}
-\item Assisted with web designing, server developing and code debugging. 
+%\item Assisted with web designing, server developing and code debugging. 
+\item Implemented various features of the bank website using .NET framework. 
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
@@ -221,13 +225,13 @@ jQuery & Bootstrap
 
 \section{Research}
 \vspace{-0.5mm} % Hacky fix for awkward extra vertical space 
-\runsubsection{A Perfidy-Aware Protocol for Designing Trustworthy Distributed Systems}
+\runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing}{A Perfidy-Aware Protocol for Designing Trustworthy Distributed Systems}}}
 \location{| January 2017 - Present}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \justify
 \begin{tightemize}
-\item Proposed a Robust Adaptive Secure Secret Sharing $(\custombold{RASSS})$ protocol for reconstructing secrets and tolerating the maximum number of cheaters in distributed systems. \custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing/blob/master/Paper/DFT\%20paper.pdf}{Paper}}
-\item Implemented a Python program that instruments RASSS protocol for comparison purposes with the Verilog hardware counterpart. \custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing}{Source}}
+\item Proposed a Robust Adaptive Secure Secret Sharing (\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing/blob/master/Paper/DFT\%20paper.pdf}{RASSS}}) protocol for reconstructing secrets and tolerating the maximum number of cheaters in distributed systems.
+\item Implemented a Python program that instruments RASSS protocol for comparison purposes with the Verilog hardware counterpart.
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
@@ -251,36 +255,36 @@ jQuery & Bootstrap
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\runsubsection{Detecting XSS Vulnerabilities in Google Chrome Extensions}
-\location{| April 2017 - Present}
+\runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Chrome-XSS-Vulnerability}{Detecting XSS Vulnerabilities in Google Chrome Extensions}}}
+\location{| April 2017 - June 2017}
 \vspace{1mm}
 \justify
 \begin{tightemize}
-\item Developed a Python/Javascript tool that performs a static taint analysis to detect potential XSS vulnerability of a Chrome extension. \custombold{\href{https://github.com/nguyenduchien1994/Chrome-XSS-Vulnerability}{Source}}  
+\item Developed a Python/Javascript tool that performs a static taint analysis to detect potential XSS vulnerability of a Chrome extension. 
 \item Downloaded 11,866 extensions from Chrome Web Store using a Selenium-based web crawler for testing purposes and successfully detected a significant number of XSS vulnerable extensions.  
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
 
 
-\runsubsection{Defense Mechanisms against Side-Channel Leakage on Web Applications}
+\runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Side-channel-Attacks}{Defense Mechanisms against Side-Channel Leakage on Web Applications}}}
 \location{| February 2017 - April 2017}
 \vspace{1mm}
 \justify
 \begin{tightemize}
 \item Demonstrated a potential side-channel attack that exploits the auto-suggestion feature of a high-profile search engine (Yandex) to deduce user's query input. 
-\item Implemented two separate defense mechanisms against this specific side-channel attack using a Chrome browser extension and a Man-In-The-Middle $(\custombold{MITM})$ proxy. \custombold{\href{https://github.com/nguyenduchien1994/Side-channel-Attacks}{Source}}
+\item Implemented two separate defense mechanisms against this specific side-channel attack using a Chrome browser extension and a Man-In-The-Middle $(\custombold{MITM})$ proxy. 
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
 
 
-\runsubsection{Image Segmentation using Network Flow Graph}
+\runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Image_Segmentation}{Image Segmentation using Network Flow Graph}}}
 \location{| October 2016 - December 2017}
 \vspace{1mm}
 \justify
 \begin{tightemize}
-\item Developed a Python/C++ tool to cluster the pixels of an image into salient regions using Gaussian Mixture Models clustering and Ford-Fulkerson maximum flow algorithms. \custombold{\href{https://github.com/nguyenduchien1994/Image_Segmentation}{Source}}
+\item Developed a Python/C++ tool to cluster the pixels of an image into salient regions using Gaussian Mixture Models clustering and Ford-Fulkerson maximum flow algorithms.
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
