Latest version Feb 21st

--- a/deedy_resume_Hien.tex
+++ b/deedy_resume_Hien.tex
@@ -149,10 +149,10 @@ PHP & \LaTeX\ & Verilog\\
 \section{Software} 
 \vspace{0.5mm} % Hacky fix for awkward extra vertical space 
 \begin{tabular}{ll}
-Unix/Linux & Git \\
-Cadence Virtuoso & PyMTL \\
-Cuckoo Sandbox & mitmproxy \\
-Vim & Django \\ 
+Unix/Linux & Git/Github \\
+Idea Intellij & IBM Clearcase \\
+Microsoft Azure & AWS \\
+Google Web Toolkit & Django \\ 
 jQuery & Bootstrap
 
 \end{tabular}
@@ -183,12 +183,21 @@ jQuery & Bootstrap
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
+\runsubsection{\href{https://jda.com/}{JDA Software}}
+\descript{| Full Stack Software Engineer}
+\location{Boston, MA | March 2018 - Present}
+\vspace{3mm}
+\justify
+\begin{tightemize}
+\item Developing codebase for various projects including a rich internet application (RIA) for transportation management and a desktop application for logistics/solutions modeler.  
+\item Partake in multiple cloud-based projects using Azure and responsible for the security enhancement of JDA transportation management and modeler software.  
+\end{tightemize}
+\vspace{\topsep}
+\sectionsep
+
 \runsubsection{\href{http://ascslab.org/index.html}{Adaptive \& Secure Computing Systems}}
 \descript{| Research Assistant }
 \location{Boston University, Boston, MA | September 2016 - Present}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Working with \custombold{\href{https://www.bu.edu/eng/profile/michel-kinsy/}{Prof. Michel Kinsy}} on computer architecture and system security.
@@ -199,22 +208,10 @@ jQuery & Bootstrap
 \runsubsection{\href{https://www2.ucar.edu/}{UCAR Earth Observing Laboratory}}
 \descript{| Software Engineering Intern }
 \location{Boulder, CO | June 2015 - September 2015}
-\vspace{1mm}
+%\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Designed and developed \custombold{\href{https://github.com/ncareol/ncharts}{source}} code for \custombold{\href{http://datavis.eol.ucar.edu/ncharts/}{Ncharts}}, a multi-device compatible Django web application that constructs real-time scientific representation of a wide variety of data from different projects.
-\end{tightemize}
-\vspace{\topsep}
-\sectionsep
-
-\runsubsection{\href{https://www.techcombank.com.vn/home}{Techcombank}}
-\descript{| Programming Intern }
-\location{Hanoi, Vietnam | June 2013 - September 2013}
-\vspace{1mm}
-\justify
-\begin{tightemize}
-%\item Assisted with web designing, server developing and code debugging. 
-\item Implemented various features of the bank website using .NET framework. 
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
@@ -223,11 +220,12 @@ jQuery & Bootstrap
 %     RESEARCH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\vspace{-2mm} % Hacky fix for awkward extra vertical space 
 \section{Research}
-\vspace{-0.5mm} % Hacky fix for awkward extra vertical space 
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing}{A Perfidy-Aware Protocol for Designing Trustworthy Distributed Systems}}}
 \location{| January 2017 - Present}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
+\vspace{-2.5mm}
 \justify
 \begin{tightemize}
 \item Proposed a Robust Adaptive Secure Secret Sharing (\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing/blob/master/Paper/DFT\%20paper.pdf}{RASSS}}) protocol for reconstructing secrets and tolerating the maximum number of cheaters in distributed systems.
@@ -236,10 +234,11 @@ jQuery & Bootstrap
 \vspace{\topsep}
 \sectionsep
 
-\vspace{-0.5mm} % Hacky fix for awkward extra vertical space 
+\vspace{-1mm} % Hacky fix for awkward extra vertical space 
 \runsubsection{Senior Thesis}
 \location{| September 2015 - June 2016 | Advisor: \custombold{\href{https://www.linkedin.com/in/kzhangnyc/}{Kang Zhang}}} 
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
+\vspace{-2.5mm}
 \justify
 \begin{tightemize}
 \item Program the NVIDIA Graphics Processing Unit (GPU) to process and reconstruct biological images for the real-time 3D Optical Coherence Tomography (OCT) technique. 
@@ -247,17 +246,15 @@ jQuery & Bootstrap
 \vspace{\topsep}
 \sectionsep
 
-
-\section{Projects}
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\vspace{-2mm} % Hacky fix for awkward extra vertical space 
+\section{Projects}
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Chrome-XSS-Vulnerability}{Detecting XSS Vulnerabilities in Google Chrome Extensions}}}
 \location{| April 2017 - June 2017}
-\vspace{1mm}
+%\vspace{0.5mm}
 \justify
 \begin{tightemize}
 \item Developed a Python/Javascript tool that performs a static taint analysis to detect potential XSS vulnerability of a Chrome extension. 
@@ -269,7 +266,7 @@ jQuery & Bootstrap
 
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Side-channel-Attacks}{Defense Mechanisms against Side-Channel Leakage on Web Applications}}}
 \location{| February 2017 - April 2017}
-\vspace{1mm}
+%\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Demonstrated a potential side-channel attack that exploits the auto-suggestion feature of a high-profile search engine (Yandex) to deduce user's query input. 
@@ -281,7 +278,7 @@ jQuery & Bootstrap
 
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Image_Segmentation}{Image Segmentation using Network Flow Graph}}}
 \location{| October 2016 - December 2017}
-\vspace{1mm}
+%\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Developed a Python/C++ tool to cluster the pixels of an image into salient regions using Gaussian Mixture Models clustering and Ford-Fulkerson maximum flow algorithms.
