--- a/deedy_resume_Hien.tex
+++ b/deedy_resume_Hien.tex
@@ -189,18 +189,18 @@ jQuery & Bootstrap
 \vspace{3mm}
 \justify
 \begin{tightemize}
-\item Developing codebase for various projects including a rich internet application (RIA) for transportation management and a desktop application for logistics/solutions modeler.  
-\item Partake in multiple cloud-based projects using Azure and responsible for the security enhancement of JDA transportation management and modeler software.  
+\item Develop codebase for various projects including a rich internet application (RIA) for transportation management and a desktop application for logistics solutions modeler.  
+\item Partake in cloud-based projects using Azure and responsible for the security enhancement of JDA transportation management and modeler software.  
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
 
 \runsubsection{\href{http://ascslab.org/index.html}{Adaptive \& Secure Computing Systems}}
 \descript{| Research Assistant }
-\location{Boston University, Boston, MA | September 2016 - Present}
+\location{Boston University, Boston, MA | September 2016 - January 2018}
 \justify
 \begin{tightemize}
-\item Working with \custombold{\href{https://www.bu.edu/eng/profile/michel-kinsy/}{Prof. Michel Kinsy}} on computer architecture and system security.
+\item Worked with \custombold{\href{https://www.bu.edu/eng/profile/michel-kinsy/}{Prof. Michel Kinsy}} on computer architecture and system security.
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
