Update June 1st

--- a/deedy_resume_Hien.tex
+++ b/deedy_resume_Hien.tex
@@ -64,9 +64,7 @@
 
 
 \namesection{Hien}{Nguyen}
-{\href{mailto:hiendn451@gmail.com}{hiendn451@gmail.com} | 518-368-2484 | 
-LinkedIn:  \href{https://www.linkedin.com/in/hien-nguyen-5567149a}{\custombold{Hien Nguyen}} |
-GitHub:   \href{https://github.com/nguyenduchien1994}{\custombold{hnguyen}}
+{Email: hiendn451@gmail.com | Phone: +1 (518)368-2484 | Linkedin: \href{https://www.linkedin.com/in/hien-nguyen-5567149a}{\custombold{linkedin.com/in/hien-nguyen-5567149a}} | Github: \href{https://github.com/nguyenduchien1994}{\custombold{github.com/nguyenduchien1994}} | Skype: hiendn451
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -82,7 +80,7 @@ GitHub:   \href{https://github.com/nguyenduchien1994}{\custombold{hnguyen}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Education} 
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
 \runsubsection{Boston University}\\
 \location{Boston, MA}
 \descript{Master of Science \\ Computer Engineering}
@@ -95,17 +93,16 @@ Graduation December 2017 \\ GPA: 3.60
 Graduated - June 2016 \\ GPA: 3.71
 \sectionsep
 
-\sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COURSEWORK
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \vspace{-2.0mm}
 \section{Coursework}
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
 \flushleft
 \subsection{Graduate}
 %\textbullet \, Advanced Data Structures \& Algorithms \\
+\vspace{1mm} % Hacky fix for awkward extra vertical space 
 \textbullet \, Cybersecurity \\
 \textbullet \, Machine Learning \\
 \textbullet \, Learning From Data \\
@@ -116,7 +113,7 @@ Graduated - June 2016 \\ GPA: 3.71
 \sectionsep
 
 \subsection{Undergraduate}
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
+\vspace{1mm} % Hacky fix for awkward extra vertical space 
 \flushleft
 \textbullet \, Advanced Hardware Systems \\
 \textbullet \, Algorithm Design \& Analysis \\
@@ -131,12 +128,13 @@ Graduated - June 2016 \\ GPA: 3.71
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Languages}
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
 \begin{tabular}{lll}
 \custombold{Proficient} & \custombold{Mid} & \custombold{Familiar} \\
 Python & Matlab & Bash\\
-Java & HTML/CSS & SQL\\
-Javascript & C/C++ & CUDA\\
-PHP & \LaTeX\ & Verilog\\ 
+Java & PHP & SQL\\
+Javascript & C/C++ & Ruby\\
+HTML/CSS & \LaTeX\ & Perl\\ 
 \end{tabular}
 \sectionsep
 
@@ -145,15 +143,14 @@ PHP & \LaTeX\ & Verilog\\
 %     TOOLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \vspace{-2.0mm}
 \section{Software} 
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
 \begin{tabular}{ll}
 Unix/Linux & Git/Github \\
 Idea Intellij & IBM Clearcase \\
 Microsoft Azure & AWS \\
 Google Web Toolkit & Django \\ 
-jQuery & Bootstrap
+Jira & MuleSoft
 
 \end{tabular}
 \sectionsep
@@ -161,12 +158,12 @@ jQuery & Bootstrap
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Architectures
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Hardware}
-\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
-\flushleft
-\textbullet \, RISC-V \\
-\textbullet \, MIPS \\
-\sectionsep
+%\section{Hardware}
+%\vspace{0.5mm} % Hacky fix for awkward extra vertical space 
+%\flushleft
+%\textbullet \, RISC-V \\
+%\textbullet \, MIPS \\
+%\sectionsep
 
 
 \end{minipage} 
@@ -186,7 +183,7 @@ jQuery & Bootstrap
 \runsubsection{\href{https://jda.com/}{JDA Software}}
 \descript{| Full Stack Software Engineer}
 \location{Boston, MA | March 2018 - Present}
-\vspace{3mm}
+\vspace{5mm}
 \justify
 \begin{tightemize}
 \item Develop codebase for various projects including a rich internet application (RIA) for transportation management and a desktop application for logistics solutions modeler.  
@@ -198,6 +195,7 @@ jQuery & Bootstrap
 \runsubsection{\href{http://ascslab.org/index.html}{Adaptive \& Secure Computing Systems}}
 \descript{| Research Assistant }
 \location{Boston University, Boston, MA | September 2016 - January 2018}
+\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Worked with \custombold{\href{https://www.bu.edu/eng/profile/michel-kinsy/}{Prof. Michel Kinsy}} on computer architecture and system security.
@@ -208,7 +206,7 @@ jQuery & Bootstrap
 \runsubsection{\href{https://www2.ucar.edu/}{UCAR Earth Observing Laboratory}}
 \descript{| Software Engineering Intern }
 \location{Boulder, CO | June 2015 - September 2015}
-%\vspace{1mm}
+\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Designed and developed \custombold{\href{https://github.com/ncareol/ncharts}{source}} code for \custombold{\href{http://datavis.eol.ucar.edu/ncharts/}{Ncharts}}, a multi-device compatible Django web application that constructs real-time scientific representation of a wide variety of data from different projects.
@@ -220,41 +218,51 @@ jQuery & Bootstrap
 %     RESEARCH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{-2mm} % Hacky fix for awkward extra vertical space 
+%\vspace{-2mm} % Hacky fix for awkward extra vertical space 
 \section{Research}
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing}{A Perfidy-Aware Protocol for Designing Trustworthy Distributed Systems}}}
-\location{| January 2017 - Present}
+\location{| January 2017 - January 2018}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \vspace{-2.5mm}
 \justify
 \begin{tightemize}
-\item Proposed a Robust Adaptive Secure Secret Sharing (\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing/blob/master/Paper/DFT\%20paper.pdf}{RASSS}}) protocol for reconstructing secrets and tolerating the maximum number of cheaters in distributed systems.
+\item Proposed a Robust Adaptive Secure Secret Sharing (\custombold{\href{https://github.com/nguyenduchien1994/Secret_Sharing/blob/master/Paper/DFT\%20paper.pdf}{RASSS}}) protocol for reconstructing secrets and tolerating maximal number of untrusted participants in distributed systems.
 \item Implemented a Python program that instruments RASSS protocol for comparison purposes with the Verilog hardware counterpart.
 \end{tightemize}
 \vspace{\topsep}
 \sectionsep
 
-\vspace{-1mm} % Hacky fix for awkward extra vertical space 
-\runsubsection{Senior Thesis}
-\location{| September 2015 - June 2016 | Advisor: \custombold{\href{https://www.linkedin.com/in/kzhangnyc/}{Kang Zhang}}} 
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\vspace{-2.5mm}
-\justify
-\begin{tightemize}
-\item Program the NVIDIA Graphics Processing Unit (GPU) to process and reconstruct biological images for the real-time 3D Optical Coherence Tomography (OCT) technique. 
-\end{tightemize}
-\vspace{\topsep}
-\sectionsep
+%\vspace{-1mm} % Hacky fix for awkward extra vertical space 
+%\runsubsection{Senior Thesis}
+%\location{| September 2015 - June 2016 | Advisor: \custombold{\href{https://www.linkedin.com/in/kzhangnyc/}{Kang Zhang}}} 
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\vspace{-2.5mm}
+%\justify
+%\begin{tightemize}
+%\item Programmed the NVIDIA Graphics Processing Unit (GPU) to process and reconstruct biological images for the real-time 3D Optical Coherence Tomography (OCT) technique. 
+%\end{tightemize}
+%\vspace{\topsep}
+%\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{-2mm} % Hacky fix for awkward extra vertical space 
 \section{Projects}
+\runsubsection{\custombold{\href{https://vnpn.co/}{VietNamese Professional Network (VNPN)}}}
+\location{| October 2017 - Present}
+\vspace{1mm}
+\justify
+\begin{tightemize}
+\item Managing \custombold{\href{https://vnpn.co/}{VNPN.co}}, a social network that connects Vietnamese professionals in America and provides a platform for exchanging business and career development resources. 
+\item Developing the webpage using Node.js and maintaining a database of 2,000 members using MongoDB.
+\end{tightemize}
+\vspace{\topsep}
+\sectionsep
+
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Chrome-XSS-Vulnerability}{Detecting XSS Vulnerabilities in Google Chrome Extensions}}}
 \location{| April 2017 - June 2017}
-%\vspace{0.5mm}
+\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Developed a Python/Javascript tool that performs a static taint analysis to detect potential XSS vulnerability of a Chrome extension. 
@@ -266,7 +274,7 @@ jQuery & Bootstrap
 
 \runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Side-channel-Attacks}{Defense Mechanisms against Side-Channel Leakage on Web Applications}}}
 \location{| February 2017 - April 2017}
-%\vspace{1mm}
+\vspace{1mm}
 \justify
 \begin{tightemize}
 \item Demonstrated a potential side-channel attack that exploits the auto-suggestion feature of a high-profile search engine (Yandex) to deduce user's query input. 
@@ -276,15 +284,15 @@ jQuery & Bootstrap
 \sectionsep
 
 
-\runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Image_Segmentation}{Image Segmentation using Network Flow Graph}}}
-\location{| October 2016 - December 2017}
+%\runsubsection{\custombold{\href{https://github.com/nguyenduchien1994/Image_Segmentation}{Image Segmentation using Network Flow Graph}}}
+%\location{| October 2016 - December 2017}
 %\vspace{1mm}
-\justify
-\begin{tightemize}
-\item Developed a Python/C++ tool to cluster the pixels of an image into salient regions using Gaussian Mixture Models clustering and Ford-Fulkerson maximum flow algorithms.
-\end{tightemize}
-\vspace{\topsep}
-\sectionsep
+%\justify
+%\begin{tightemize}
+%\item Developed a Python/C++ tool to cluster the pixels of an image into salient regions using Gaussian Mixture Models clustering and Ford-Fulkerson maximum flow algorithms.
+%\end{tightemize}
+%\vspace{\topsep}
+%\sectionsep
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     AWARDS AND EXTRA-CURRICULARS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
