--- a/deedy_resume_Hien.tex
+++ b/deedy_resume_Hien.tex
@@ -254,7 +254,7 @@ Jira & MuleSoft
 \vspace{1mm}
 \justify
 \begin{tightemize}
-\item Managing \custombold{\href{https://vnpn.co/}{VNPN.co}}, a social network that connects Vietnamese professionals in America and provides a platform for exchanging business and career development resources. 
+\item Managing \custombold{\href{https://vnpn.co/}{VNPN.co}}, a social network that connects Vietnamese professionals in America, providing a platform for exchanging business and career development resources. 
 \item Developing the webpage using Node.js and maintaining a database of 2,000 members using MongoDB.
 \end{tightemize}
 \vspace{\topsep}
